# pipecat-bot-speaking-observer

./: .gitignore  LICENSE  README.md  pyproject.toml
pipecat_bot_speaking_observer/: __init__.py
